Pascal/test/cohadar/pascal/errors/not_a_record.pas
program test;
type A = record x:integer; end;

var a: array[0..1] of integer;

begin
	a.x := 3;
end.